Actually fix the genre clipping bug

--- a/src/components/Media/LeftContainer/LeftContainer.module.scss
+++ b/src/components/Media/LeftContainer/LeftContainer.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   grid-area: 2 / 1 / 3 / 2;
-  overflow-y: scroll;
+  overflow-y: scroll; // When the title is too long, it takes up quite a bit of height, not leaving enough room for genres
 }
 
 .poster {
@@ -20,5 +20,6 @@
 @media only screen and (max-width: 500px) {
   .container {
     margin-bottom: 20px;
+    overflow: unset; // To unset the overflow scroll
   }
 }
